--- a/ChronomeHyperAccess/ChronomeHyperAccess.csproj
+++ b/ChronomeHyperAccess/ChronomeHyperAccess.csproj
@@ -52,6 +52,8 @@
     <Compile Include="about.Designer.cs">
       <DependentUpon>about.cs</DependentUpon>
     </Compile>
+    <Compile Include="debbuggingHelper.cs" />
+    <Compile Include="fileHandler.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
