--- a/ChronomeHyperAccess/ChronomeHyperAccess.csproj
+++ b/ChronomeHyperAccess/ChronomeHyperAccess.csproj
@@ -28,9 +28,17 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>chronome_logo_rxE_icon.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ChronomeHyperAccess.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -112,6 +120,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\chronome logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="chronome_logo_rxE_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
